--- a/views/layout.slim
+++ b/views/layout.slim
@@ -3,6 +3,7 @@ html
   head
     title Halo Stats
     link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
+    link rel="stylesheet" href="/style.css"
   body
-    h1 Halo
-    == yield
+    == slim :header
+    .container == yield
