--- a/views/layout.slim
+++ b/views/layout.slim
@@ -7,3 +7,4 @@ html
   body
     == slim :header
     .container == yield
+    script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.4.27/vue.global.min.js"
