--- a/views/header.slim
+++ b/views/header.slim
@@ -1,6 +1,10 @@
+- error_msg ||= nil
+
 header
   a.fw-bold href="/" Halo Stats
-  form.d-flex.search-form action="/players" method="post"
+  form.d-flex.align-items-center.search-form action="/players" method="post"
+    - if error_msg.present?
+      .error-msg.text-white.text-nowrap.me-3 = error_msg
     input.form-control.me-2 name="gamertag" type="text" placeholder="Find a player" required="true"
     button.btn.btn-primary type="submit" Search
 
@@ -8,3 +12,7 @@ javascript:
   document.querySelector('.search-form').addEventListener('submit', function () {
     this.querySelector('button').disabled = true
   })
+
+- if error_msg.present?
+  javascript:
+    setTimeout(() => document.querySelector('.error-msg').style.opacity = 0, 5000)
