--- a/views/layout.slim
+++ b/views/layout.slim
@@ -5,6 +5,6 @@ html
     link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css"
     link rel="stylesheet" href="/style.css"
   body
-    == slim :header
+    == slim :header, locals:
     .container == yield
     script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.4.27/vue.global.min.js"
